--- a/assignment/nbproject/project.properties
+++ b/assignment/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.weka.jar=P:\\Final_Year\\COM527\\weka-3-7-12\\weka.jar
+file.reference.weka.jar-1=..\\weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.weka.jar}
+    ${file.reference.weka.jar}:\
+    ${file.reference.weka.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
