--- a/assignment/nbproject/private/private.properties
+++ b/assignment/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.weka.jar=C:\\Users\\Aaron Jackson\\Documents\\ComputingProject\\naive-bayes-assgt\\weka.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Aaron Jackson\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
